[package]
name = "minesweeper_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.size]
inherits = "release"
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
nannou = "0.18.1"
rand = "0.8.5"
