[package]
name = "minesweeper_rs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[profile.size]
inherits = "release"
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
nannou = "0.18.1"
nannou_egui = "0.5.0"
rand = "0.8.5"
